# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
page_analyzer/: app.py  db.py  parser.py  url_normalizer.py
page_analyzer/templates/: index.html  layout.html  url_detail.html  urls.html
